2003-02-12  MINAMI Hirokazu  <minami@chem.s.u-tokyo.ac.jp>

	* Added a cache to x_imagelib_load_file in x_imagelib_gdk.c 
	  so that the last used image can be re-generated 
	  without reading from the image file again.
	  (for Seiichi SATO san)

2003-2-11 Araki Ken <arakiken@users.sf.net>

	* Mlterm died as soon as the pty in the last window closed even if 
	  other background ptys exist. Fixed.
	  (Thanks to Nanashi san)

2003-2-11 Araki Ken <arakiken@users.sf.net>

	* Backscroll mode is automatically exitted if screen is scrolled to the bottom.
	  (Thanks to Murase Masaki san)
	* Mlconfig appears in the correct display even if it is called from the window
	  whose display is different from the default.
	  (Thanks to Minami Hirokazu san and Nakada Nobuyoshi san)

2003-2-11 Araki Ken <arakiken@users.sf.net>

	* mlclient wouldn't die until the new window which mlclient created dies. Fixed.
	  (Thanks to Nanashi san)

2003-2-11 Araki Ken <arakiken@users.sf.net>

	* mlclient accepts "pty_list" and "/dev/..." as the 1st argument.
	  If "pty_list" is specified, mlclient outputs pty lists which are opened.
	  If "/dev/..." is specified, a new window is opened with the specified pty.

2003-2-11 Araki Ken <arakiken@users.sf.net>

	* Renamed -P/--ptys/ptys option to -@/--screens/startup_screens, and
	  added -P/--ptys/startup_ptys option.
	* Added ESC [ 5379 ; select_pty = <dev name> ; BEL and
	  ESC [ 5380 ; pty_list = <dev name> ; BEL
	* Added PTY selection menu to mlconfig.

2003-2-9 Araki Ken <arakiken@users.sf.net>

	* Added zh_TW locale messages to mlconfig.
	  (Thanks to Yaun-Chen Cheng)

2003-2-9 Araki Ken <arakiken@users.sf.net>

	* If you pressed 'U' and 'Z' with arabic kbd, nothing output. Fixed.

2003-2-8 Araki Ken <arakiken@users.sf.net>

	* mlconfig saves configurations in ~/.mlterm/main if OK button pressed.

2003-2-5 MINAMI Hirokazu <minami@chem.s.u-tokyo.ac.jp> 
	
	* Added support for depth 8 PseudoColor in gdkpixbuf
	  image processing module. 
	